# wisdom-spark-ai

./: .env.example  .gitignore  DISTRIBUTION_STRATEGY.md  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml
alembic/: env.py
exports/alpaca/: wisdom_alpaca.json
exports/constitutional/: wisdom_constitution.txt  wisdom_constitution_anthropic.json
exports/embeddings/: wisdom_embedding_pairs.jsonl
exports/huggingface/: README.md  traditions.jsonl  wisdom_corpus.json  wisdom_entries.jsonl
exports/pretraining/: wisdom_pretraining.jsonl  wisdom_pretraining.txt
exports/rlhf/: README.md  wisdom_pairs_anthropic.jsonl  wisdom_preference_pairs.jsonl
exports/sharegpt/: wisdom_sharegpt.json
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
mcp-listing/: smithery.json
scripts/: export_all_formats.py  export_huggingface.py  export_rlhf.py  generate_embeddings.py  seed_corpus.py
src/: app.py  config.py  database.py
src/api/: schemas.py
src/api/routes/: crawler.py  wisdom.py
src/corpus/: cross_references.yaml  rlhf_preference_pairs.yaml
src/corpus/themes/: universal_themes.yaml
src/corpus/traditions/: african_proverbs.yaml  buddhism.yaml  christian_mystics.yaml  confucianism.yaml  existentialism.yaml  greek_philosophy.yaml  (+11 more)
src/crawler/: config.py  runner.py
src/mcp_server/: server.py
src/middleware/: wisdom_proxy.py
src/models/: __init__.py  crawl_log.py  wisdom.py
src/services/: embedding_service.py  wisdom_service.py
system_prompts/: constitutional_principles.md  universal_system_prompt.md
(+7 files in other folders)
